--- a/webui/unlock events.pug
+++ b/webui/unlock events.pug
@@ -6,6 +6,19 @@ div
             p.card-header-title
                 span.icon
                     i.mdi.mdi-star
+                | Unlock Events
+        .card-content
+            .field
+                .control
+                    .select
+                        select(name="specevent_select" id="specevent_select")
+                            option(name="none" id="none") Select Unlock Event
+        .spec.list
+    .card
+        .card-header
+            p.card-header-title
+                span.icon
+                    i.mdi.mdi-star
                 | Stamp Events
         .card-content
             .field
